third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/main_arguments.exp
module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    public entry fun <SELF>_0(_sender: signer, _a: address, _x8: u8, _x64: u64, _x128: u128, _b: bool, _v8: vector<u8>, _va: vector<address>, _v64: vector<u64>, _v128: vector<u128>, _vb: vector<bool>, _vv8: vector<vector<u8>>, _vva: vector<vector<address>>, _vv64: vector<vector<u64>>, _vv128: vector<vector<u128>>, _vvb: vector<vector<bool>>, _vvv8: vector<vector<vector<u8>>>, _vvva: vector<vector<vector<address>>>, _vvv64: vector<vector<vector<u64>>>, _vvv128: vector<vector<vector<u128>>>, _vvvb: vector<vector<vector<bool>>>, _vvvv8: vector<vector<vector<vector<u8>>>>, _vvvva: vector<vector<vector<vector<address>>>>, _vvvv64: vector<vector<vector<vector<u64>>>>, _vvvv128: vector<vector<vector<vector<u128>>>>, _vvvvb: vector<vector<vector<vector<bool>>>>) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ main_arguments.move:1:76
  │
1 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
  │                                                                            ^
  │                                                                            │
  │                                                                            Unexpected '<'
  │                                                                            Expected an identifier
